effects/slide: Increase spring constant

We've got complaints that the animation is too slow.

BUG: 455450


(cherry picked from commit 4c07daec3f7d16c58cf039164e706dd0363b2557)